# fdroid-repo

./: .cnb.yml  .gitignore  main.py  models.py  pyproject.toml  repo.yml
.cnb/: web_trigger.yml
.github/workflows/: update-fdroid.yml
repo/: de.syss.MifareClassicTool_70.apk  entry.json  index-v1.json  index-v2.json  index.html  index.xml  io.github.vvb2060.packageinstaller_8.apk  li.songe.gkd_81.apk
repo/status/: running.json  update.json
